--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="Sprite"></div>
         <div style="font-weight: 800;" class="Name">Sample Name</div>
 
-        <div style="font-weight: 600; text-transform: capitalize;" class="Type"></div>
+        <div style="color: white; font-weight: 600; text-transform: capitalize;" class="Type"></div>
 
         <div style="margin-top: 20px;" class="Attributes">
             <div class="Attribute">
